--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Magnitude judgements, axis limits, proportional reasoning, denominator neglect, cognitive mechanisms, cognitive processing, in bar charts"
+title: "Bar Charts, Magnitude Judgements, and Denominator Information"
 format: html
 editor: visual
 
@@ -11,6 +11,8 @@ execute:
   warning: true
   message: true
   include: false
+  
+bibliography: axis-extension.bib
 ---
 
 ```{r}
@@ -21,7 +23,6 @@ library(lmerTest)
 library(buildmer)
 library(qwraps2)
 library(emmeans)
-#library(broom.mixed)
 library(effectsize)
 library(papaja)
 library(patchwork)
@@ -294,32 +295,27 @@ gender_e2 <- e2 %>%
   pivot_wider(names_from = gender, values_from = freq)
 ```
 
-Axis limit (default/extended)
+\#{{< include text_body/abstract.md >}}
 
-Denominator information (present/absent)
+{{< include text_body/introduction.md >}}
 
-#{{< include text_body/abstract.md >}}
-
-#{{< include text_body/introduction.md >}}
-
-https://osf.io/e9j43
-https://osf.io/hx9y4
+https://osf.io/e9j43 https://osf.io/hx9y4
 
 # Experiment 1
 
 ## Introduction
 
-This experiment investigates the influence of axis limits on interpretations of plotted values' magnitude. Participants viewed bar charts with default axes, or extended to a denominator value well above the bars. Comparing participants' interpretations captures the influence displaying the same data with and without numerical context.
+This experiment investigates the influence of axis limits on interpretations of plotted values' magnitude. Participants viewed bar charts with default axes, or axes which extended to a denominator value well above the bars. Comparing participants' interpretations captures the influence of displaying the same data with and without numerical context.
 
 ## Method
 
 ### Materials
 
-We developed 40 scenarios about fictitious studies. Each study evaluated a specific outcome in five categories (e.g., the number of items produced without defects, for five manufacturing methods). The denominator (e.g., total number of items produced) was identical for each category.
+We developed 40 scenarios about fictitious studies. Each study evaluated a specific outcome across five categories (e.g., the number of items produced without defects, for five manufacturing methods). The denominator (e.g., total number of items produced) was identical for each category.
 
-We generated bar charts in R using {ggplot2} (version 4.1.2),  {tidyverse} (version 1.3.1) and {ggh4x} (version 0.2.1). The two versions of each chart displayed the same five values, but employed different y-axis limits. Denominator values (400, 500, or 600) were used to generate datasets, which were generated from a normal distribution with a mean equal to either 20% or 40% of a given denominator value, and a standard deviation equal to 1% of the denominator value.
+We generated bar charts in R using {ggplot2} (version 4.1.2), {tidyverse} (version 1.3.1) and {ggh4x} (version 0.2.1). The two versions of each chart displayed the same five values, but employed different y-axis limits. Denominator values (400, 500, or 600) were used to generate datasets: data were sampled from normal distribution with a mean equal to either 20% or 40% of a given denominator value, and a standard deviation equal to 1% of the denominator value.
 
-For charts with extended axes, the denominator value y-axis upper limit. The other charts used a y-axis upper limit was dictated by ggplot2's default axis settings. These settings automatically identify a set of convenient breaks for each dataset, then slightly extend the plot area, adding an additional 5% of the axis range to the axis. In both conditions, a smaller expansion factor of 1% was applied to the lower axis limit, contrary to the default settings, in order to eliminate visible space below the 0 baseline. @fig-example-charts shows example charts for both conditions.
+For charts with extended axes, the denominator value y-axis upper limit. The other charts used a y-axis upper limit was dictated by ggplot2's default axis settings. These settings automatically identify a set of convenient breaks for each dataset, then slightly extend the plot area, adding an additional 5% of the axis range. In both conditions, a smaller expansion factor of 1% was applied to the lower axis limit, contrary to the default settings, in order to eliminate visible space below the 0 baseline. @fig-example-charts shows example charts for both conditions.
 
 ```{r}
 #| label: fig-example-charts
@@ -337,11 +333,11 @@ We included six attention check trials to assess participants' engagement with t
 
 ### Design
 
-We employed a within-participants design: participants viewed 16 different charts in each of the two conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using two lists. However, all participants saw the same versions of the eight filler items and six attention check items. There were a total of 46 trials, which were presented in a random order. 
+We employed a within-participants design: participants viewed 16 different charts in each of the two conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using two lists. However, all participants saw the same versions of the eight filler items and six attention check items. There were a total of 46 trials, which were presented in a random order.
 
 ### Participants
 
-Participants were recruited using Prolific.co. The experiment was advertised to fluent English speakers, who had normal-or-corrected to normal vision, who had previously participated in at least 100 studies on the site.
+Participants were recruited using Prolific.co. The experiment was advertised to fluent English speakers with normal-or-corrected to normal vision, who had previously participated in at least 100 studies on the site.
 
 Data were returned by 157 participants. Per pre-registered exclusion criteria, seven participants' submissions were rejected because they answered more than one of six attention check questions incorrectly. Participants whose submissions were accepted received £3.50.
 
@@ -351,9 +347,9 @@ This experiment was approved by the University of Manchester's Division of Neuro
 
 ### Procedure
 
-We programmed the experiment using PsychoPy (version 2022.1.4). Participants were instructed to carry out the experiment using a laptop or desktop computer (not a mobile phone or tablet). After providing informed consent, participants completed a demographic questionnaire and Garcia-Retamero et al.'s (2016) 5-item subjective data visualisation literacy scale
+We programmed the experiment using PsychoPy (version 2022.1.4, [@peirce_psychopy2_2019]). Participants were instructed to carry out the experiment using a laptop or desktop computer (not a mobile phone or tablet). After providing informed consent, participants completed a demographic questionnaire and Garcia-Retamero et al.'s (2016) five-item subjective data visualisation literacy scale.
 
-Participants were asked to imagine they were a researcher tasked with determining the outcome of experiments and surveys. They were instructed, to make an overall assessment of all data presented in a graph after studying the text, graph, and question. All questions asked about plotted values' magnitudes (e.g., 'How successful were the manufacturing methods?'), with participants responding on visual analogue scales with anchors at the extremes (e.g., 'very unsuccessful', 'very successful'). @fig-e1-trial shows an example trial. 
+Participants were asked to imagine they were a researcher tasked with determining the outcome of experiments and surveys. They were instructed, to make an overall assessment of all data presented in a graph after studying the text, graph, and question. All questions asked about plotted values' magnitudes (e.g., 'How successful were the manufacturing methods?'), with participants responding on visual analogue scales with anchors at the extremes (e.g., 'very unsuccessful', 'very successful'). @fig-e1-trial shows an example trial.
 
 ```{r}
 #| label: fig-e1-trial
@@ -368,6 +364,8 @@ Participants were permitted to move the response marker as many times as they li
 
 ### Magnitude Ratings
 
+@fig-e1-mag shows the distribution of individual responses for charts with default axes and extended axes.
+
 ```{r}
 #| label: fig-e1-mag
 #| include: true
@@ -378,7 +376,8 @@ e1 %>%
               alpha = 0.1) +
   scale_y_discrete(breaks = c("extend", "default"),
                    labels = c("Extended", "Default")) + 
-  labs(title = 'Experiment 1',
+  labs(title = "Experiment 1",
+       subtitle =  "Raw Data",
       y = NULL,
        x = NULL) + 
   scale_x_continuous(labels = c('Very low\nmagnitude', 'Very high\nmagnitude'),
@@ -386,8 +385,6 @@ e1 %>%
     minor_breaks = c()) + 
   theme_minimal(base_size = 16)
 ```
-
-@fig-e1-mag shows the distribution of individual responses for charts with default axes and extended axes.
 
 ```{r}
 #| label: e1-mag
@@ -429,13 +426,13 @@ e1_mag_l <- lmer(add.terms(formula(e1_mag),
 summary_extract(e1_mag_l)
 ```
 
-Accounting for differences in data visualisation literacy did not change the significant effect of axis upper bound: F(`r printnum(e1_mag_l_cond_NumDF)`, `r printnum(e1_mag_l_cond_DenDF)`) = `r printnum(e1_mag_l_cond_F.value)`, p `r printp(e1_mag_l_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_l_cond_Eta2_partial)`.
+Accounting for differences in data visualisation literacy did not change the significant effect of Axis Limit: F(`r printnum(e1_mag_l_cond_NumDF)`, `r printnum(e1_mag_l_cond_DenDF)`) = `r printnum(e1_mag_l_cond_F.value)`, p `r printp(e1_mag_l_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_l_cond_Eta2_partial)`.
 
 ## Discussion
 
-This experiment explored the consequences of including graphical cues to denominators through bar charts' axes. We observed that plotted values' magnitudes were interpreted as smaller when a default axis limit was used, compared to an axis limit equal to the dataset's denominator value. Therefore, assessments of data were biased by presence or absence of numerical context in bar charts.
+This experiment explored the consequences of including a graphical cue to a denominator value using bar charts' axes. We observed that plotted values' magnitudes were interpreted as smaller when a default axis limit was used, compared to an axis limit equal to the dataset's denominator value. Therefore, assessments of data were biased by the presence or absence of numerical context in bar charts.
 
-Denominator information informs magnitude judgements. In bar charts with extended axes, denominator information was available through the accompanying text and through axes. Comparison with bar charts employing default axes, where denominator information was *only* available through text, reveals the contribution of the graphical cue to the denominator value. Varied differences between conditions illustrate variation in interpretation. The similarity of lower magnitude ratings across conditions indicates some attention to denominator information in the absence of a graphical cue. However, some extreme high magnitude ratings in response to default axes only indicate a failure to account for denominator information in the absence of a graphical cue. Extreme high magnitude ratings suggest that the appearance of tall bars terminating above the highest gridline carried the implication of large values.
+Denominator information informs magnitude judgements. In bar charts with extended axes, denominator information was available through the accompanying text and through axes. Comparison with bar charts employing default axes, where denominator information was *only* available through text, reveals the contribution of the graphical cue to the denominator value. Inconsistency in the differences between conditions illustrates variation in interpretation. The relative similarity of lower magnitude ratings across conditions indicates some attention to denominator information in the absence of a graphical cue. However, some extreme high magnitude ratings suggest that the appearance of tall bars carried the implication of large values. These ratings may indicate a failure to account for denominator information in the absence of a graphical cue. We investigate the role of denominator information further in Experiment 2.
 
 # Experiment 2
 
@@ -443,25 +440,25 @@ Denominator information informs magnitude judgements. In bar charts with extende
 
 Experiment 1 found differences in interpretations of data presented using different axes limits. Overall, plotted data were associated with lower magnitudes when presenting using axes which extended to a denominator value. Compared to bar charts with extended axes, charts with no graphical cue to a denominator value elicited a wider variety of responses. This variety appears to reflect differences in how the denominator information supplied in accompanying text used in magnitude judgements. This raises questions about how text including denominator information influences the interpretation of different chart designs.
 
-By manipulating the presence of denominator information in accompanying text, in addition to axis range, we investigate how these graphical and textual cues inform assessments of data. This allows us to understand how different chart designs are interpreted with and without additional numerical context. This 2x2 design also allows us to replicate the findings from Experiment 1 and explore whether ratings in the absence of denominator information correspond to the previously observed pattern of extreme ratings.
+By manipulating the presence of denominator information in accompanying text, in addition to manipulating axis limits, we investigate how these textual and graphical cues inform assessments of data. This allows us to understand how different chart designs are interpreted with and without additional numerical context. This 2x2 design also allows us to replicate the findings from Experiment 1 and explore whether ratings in the absence of denominator information correspond to the previously observed pattern of extreme ratings.
 
-This follow-up experiment requires minor adaptations to materials and procedure. First, there is a risk that highly ambiguous trials without denominator information supplied in text will elicit unreliable random ratings. Therefore, we collect additional confidence ratings to directly indexing of this aspect of participants' evaluations. This provides a more comprehensive view of participants' cognitive states and interpretations. Second, when denominators are not supplied in text, participants may use denominator values supplied in previous trials to inform their judgements. A limited range of denominators (as in E1) would artificially diminish uncertainty regarding possible values, inhibiting authentic, spontaneous judgements. Therefore, we expand the range of denominators values in E2. Third, increasing the number of fillers (which depict relatively high magnitudes) to match the number of experimental items (which depict relatively low magnitudes) will avoiding priming effects by ensuring high and low magnitudes seem equally plausible.
+This follow-up experiment requires minor adaptations to materials and procedure. First, there is a risk that highly ambiguous trials without denominator information supplied in text will elicit unreliable random ratings. Therefore, we collect additional confidence ratings to directly indexing this aspect of participants' evaluations. This provides a more comprehensive view of participants' cognitive states and interpretations. Second, when denominators are not supplied in text, participants may use denominator values supplied in previous trials to inform their judgements. A limited range of denominators (as in Experiment 1) would artificially diminish uncertainty regarding possible values, inhibiting authentic, spontaneous judgements. Therefore, we expand the range of denominators values in Experiment 2. Third, increasing the number of fillers (which depict relatively high magnitudes) to match the number of experimental items (which depict relatively low magnitudes) will avoiding priming effects by ensuring high and low magnitudes seem equally plausible.
 
 ## Method
 
 ### Materials
 
-We generated bar charts in R using {ggplot2} (version 4.2.1), {tidyverse} (version 1.3.2) and {ggh4x} (version 0.2.3). 
+We generated bar charts in R using {ggplot2} (version 4.2.1), {tidyverse} (version 1.3.2) and {ggh4x} (version 0.2.3).
 
-Bar charts were generated using the same method as in Experiment 1. We used the same scenarios from Experiment 1, and generated 24 new scenarios for use as additional filler items, thus employing 32 experimental items and 32 filler items. To increase variation across datasets, we employed a wider range of denominators (200, 400, 600, 800), therefore the plotted values differed from E1. 
+Bar charts were generated using the same method as in Experiment 1. We used the same scenarios from Experiment 1, and generated 24 new scenarios for use as additional filler items, thus employing 32 experimental items and 32 filler items. To increase variation across datasets, we employed a wider range of denominators (200, 400, 600, and 800), therefore the plotted values differed from Experiment 1.
 
-We added the word 'surveyed' or 'assessed' to accompanying text for seven items where the absence of a denominator may have implied that data were collected for the entire population under study. For example, where the study concerned data collected in five towns, the final sentence read 'The graph shows, for each town, how many people *surveyed* used public transport regularly', to avoid the implication that the denominator was equal to an entire town's population. This ensured that the inclusion of denominator values was equally informative across items.  
+We added the word 'surveyed' or 'assessed' to accompanying text for seven items where the absence of a denominator may have implied that data were collected for the entire population under study. For example, where the study concerned data collected in five towns, the final sentence read 'The graph shows, for each town, how many people *surveyed* used public transport regularly', to avoid the implication that the denominator was equal to an entire town's population. This ensured that the inclusion of denominator values was equally informative across all scenarios.
 
-`r printnum(get_anomalies(e2), digits = 0)`% of datasets used were re-generated to ensure that highest gridline in a default axis did not exceed the highest plotted value.
+`r printnum(get_anomalies(e2), digits = 0)`% of datasets used were re-generated to ensure that highest gridline of a default axis did not exceed the highest plotted value.
 
 ### Design
 
-We employed a within-participants 2x2 Latin-squared design with two factors: axis upper bound (default vs. extended) and denominator presence (present vs. absent). Participants viewed 8 different charts for each combination of conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using four lists. However, all participants saw the same versions of the 32 filler items and six attention check items.
+We employed a within-participants 2x2 Latin-squared design with two factors: Axis Limit (default vs. extended) and denominator presence (present vs. absent). Participants viewed 8 different charts for each combination of conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using four lists. However, all participants saw the same versions of the 32 filler items and six attention check items.
 
 ### Participants
 
@@ -494,6 +491,8 @@ include_graphics("images/trial_e2.png")
 
 ### Magnitude Ratings
 
+@fig-e2-mag shows the distribution of magnitude ratings for charts with default axes and extended axes, where denominators were absent from text, and where they were present.
+
 ```{r}
 #| label: fig-e2-mag
 #| include: true
@@ -509,7 +508,8 @@ e2 %>%
               alpha = 0.1) +
   scale_y_discrete(limits = c("extend", "default"),
                    labels = c("Extended", "Default")) + 
-  labs(title = 'Experiment 2',
+  labs(title = "Experiment 2 - Magnitude Ratings",
+       subtitle =  "Raw Data",
       y = NULL,
        x = NULL) + 
   scale_x_continuous(labels = c('Very low\nmagnitude', 'Very high\nmagnitude'),
@@ -518,8 +518,6 @@ e2 %>%
   facet_wrap(vars(denominator), ncol = 1, labeller = labeller(denominator = denom_labs)) +
   theme_minimal(base_size = 16)
 ```
-
-@fig-e2-mag shows the distribution of magnitude ratings for charts with default axes and extended axes, where denominators were absent from text, and where they were present.
 
 ```{r}
 #| label: e2-mag
@@ -538,7 +536,7 @@ summary_extract(e2_mag)
 
 A mixed effects model revealed that charts with default axes elicited higher ratings than chart with extended axes (F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`) and charts not accompanied by a denominator in text elicited higher ratings than those accompanied by a denominator (F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`).
 
-Crucially, there was also a significant interaction between axis upper bound and denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`. @fig-e2-mag-int plots this interaction.
+Crucially, there was also a significant interaction between Axis Limit and denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`. @fig-e2-mag-int plots this interaction.
 
 ```{r}
 #| label: e2-mag-contrasts
@@ -548,7 +546,7 @@ e2_mag_emm <- emmeans(e2_mag@model, pairwise ~ axis * denominator, adjust = 'sid
 get_contrasts(e2_mag_emm, condition = "denominator")
 ```
 
-Pairwise comparisons revealed that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm_pres_z.ratio)`, p `r printp(e2_mag_emm_pres_p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm_abs_z.ratio)`, p `r printp(e2_mag_emm_abs_p.value)`). Therefore, the interaction indicates that the influence of a bar chart's axis was affected by whether the denominator was present or absent.
+Pairwise comparisons revealed that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from Experiment 1 (z = `r printnum(e2_mag_emm_pres_z.ratio)`, p `r printp(e2_mag_emm_pres_p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm_abs_z.ratio)`, p `r printp(e2_mag_emm_abs_p.value)`). Therefore, the interaction indicates that the magnitude of influence exerted by a bar chart's axis varied according to whether the denominator was present or absent.
 
 ```{r}
 #| include: false
@@ -578,7 +576,7 @@ emmip(e2_mag@model, denominator ~ axis, CIs = T,
                      minor_breaks = seq(1,2,0.2),
                      labels = c('Very low\nmagnitude', 
                                 'Very high\nmagnitude')) + 
-  labs(x = "Axis Upper Bound",
+  labs(x = "Axis Limit",
        y = "Magnitude Rating",
        color = "Denominator in Text",
        title = "Experiment 2 - Magnitude Ratings",
@@ -621,7 +619,8 @@ e2 %>%
               alpha = 0.1) +
   scale_y_discrete(breaks = c("extend", "default"),
                    labels = c("Extended", "Default")) + 
-  labs(title = 'Experiment 2',
+  labs(title = 'Experiment 2 - Confidence Ratings',
+       subtitle = "Raw Data",
       y = NULL,
        x = NULL) + 
   scale_x_continuous(labels = c('Not very\nconfident', 'Very\nconfident'),
@@ -683,7 +682,7 @@ emmip(e2_con@model, denominator ~ axis,
                      minor_breaks = seq(1,2,0.2),
                      labels = c('Not very\nconfident', 
                                 'Very\nconfident')) + 
-  labs(x = "Axis Upper Bound",
+  labs(x = "Axis Limit",
        y = "Magnitude Rating",
        color = "Denominator in Text",
        title = "Experiment 2 - Confidence Ratings",
@@ -695,8 +694,7 @@ emmip(e2_con@model, denominator ~ axis,
 summary_extract(e2_con)
 ```
 
-A mixed effects model revealed was a main effect associated with axis limits (F(`r printnum(e2_con_axis_NumDF)`, `r printnum(e2_con_axis_DenDF)`) = `r printnum(e2_con_axis_F.value)`, p `r printp(e2_con_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_axis_Eta2_partial)`) and a main effect associated with denominator presence (F(`r printnum(e2_con_denominator_NumDF)`, `r printnum(e2_con_denominator_DenDF)`) = `r printnum(e2_con_denominator_F.value)`, p `r printp(e2_con_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_denominator_axis_NumDF)`, `r printnum(e2_con_denominator_axis_DenDF)`) = `r printnum(e2_con_denominator_axis_F.value)`, p `r printp(e2_con_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_axis_Eta2_partial)`.
-This interaction consisted of a difference between extended and default charts when the denominator was absent from text (z = `r printnum(e2_con_emm_abs_z.ratio)`, p `r printp(e2_con_emm_abs_p.value)`), but no difference between charts the denominator was present (z = `r printnum(e2_con_emm_pres_z.ratio)`, p `r printp(e2_con_emm_pres_p.value, add_equals = TRUE)`). However, it is clear from @fig-e2-con-int, as well as the partial $\eta^2$ values, that the effect sizes associated with axis limits and the interaction are trivial.
+A mixed effects model revealed was a main effect associated with axis limits (F(`r printnum(e2_con_axis_NumDF)`, `r printnum(e2_con_axis_DenDF)`) = `r printnum(e2_con_axis_F.value)`, p `r printp(e2_con_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_axis_Eta2_partial)`), a main effect associated with denominator presence (F(`r printnum(e2_con_denominator_NumDF)`, `r printnum(e2_con_denominator_DenDF)`) = `r printnum(e2_con_denominator_F.value)`, p `r printp(e2_con_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_denominator_axis_NumDF)`, `r printnum(e2_con_denominator_axis_DenDF)`) = `r printnum(e2_con_denominator_axis_F.value)`, p `r printp(e2_con_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_axis_Eta2_partial)`. This interaction consisted of a difference between extended and default charts when the denominator was absent from text (z = `r printnum(e2_con_emm_abs_z.ratio)`, p `r printp(e2_con_emm_abs_p.value)`), but no difference between charts the denominator was present (z = `r printnum(e2_con_emm_pres_z.ratio)`, p `r printp(e2_con_emm_pres_p.value, add_equals = TRUE)`). However, it is clear from @fig-e2-con-int, as well as the partial $\eta^2$ values, that the effect sizes associated with axis limits and the interaction are trivial.
 
 ### Confidence Ratings and Data Visualisation Literacy
 
@@ -715,3 +713,5 @@ summary_extract(e2_con_l)
 ```
 
 Accounting for differences in data visualisation literacy did not change the pattern of results. There was a main effect associated with axis limits (F(`r printnum(e2_con_l_axis_NumDF)`, `r printnum(e2_con_l_axis_DenDF)`) = `r printnum(e2_con_l_axis_F.value)`, p `r printp(e2_con_l_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_axis_Eta2_partial)`) and a main effect associated with denominator presence (F(`r printnum(e2_con_l_denominator_NumDF)`, `r printnum(e2_con_l_denominator_DenDF)`) = `r printnum(e2_con_l_denominator_F.value)`, p `r printp(e2_con_l_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_l_denominator_axis_NumDF)`, `r printnum(e2_con_l_denominator_axis_DenDF)`) = `r printnum(e2_con_l_denominator_axis_F.value)`, p `r printp(e2_con_l_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_axis_Eta2_partial)`.
+
+{{< include text_body/discussion.md >}}
